Cadastro De Paciente

--- a/lang/en.json
+++ b/lang/en.json
@@ -179,6 +179,7 @@
     "Regards,": "Regards,",
     "Register": "Register",
     "Remember me": "Remember me",
+    "Don't have an account?": "Don't have an account?",
     "Request Header Fields Too Large": "Request Header Fields Too Large",
     "Request Timeout": "Request Timeout",
     "Resend Verification Email": "Resend Verification Email",
