--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -179,6 +179,7 @@
     "Regards,": "Atenciosamente,",
     "Register": "Registrar",
     "Remember me": "Lembre-se de mim",
+    "Don't have an account?": "Não tem uma conta?",
     "Request Header Fields Too Large": "Campos De Cabeçalho De Solicitação Muito Grandes",
     "Request Timeout": "Tempo Limite De Requisição",
     "Resend Verification Email": "Enviar novamente o e-mail de verificação",
