--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -1,35 +1,52 @@
 {
     "(and :count more error)": "(e mais :count erro)",
     "(and :count more errors)": "(e mais :count erro)|(e mais :count erros)|(e mais :count erros)",
+    "A Timeout Occurred": "Ocorreu Um Tempo Limite",
     "A decryption key is required.": "Uma chave para decriptografia é necessaria.",
     "A new verification link has been sent to the email address you provided during registration.": "Um novo link de verificação foi enviado para o endereço de e-mail que você forneceu durante o processo de cadastro.",
     "A new verification link has been sent to your email address.": "Um novo link de verificação foi enviado para seu endereço de e-mail.",
-    "A Timeout Occurred": "Ocorreu Um Tempo Limite",
     "Accept": "Aceitar",
     "Accepted": "Aceito",
     "Action": "Ação",
     "Actions": "Ações",
     "Add": "Adicionar",
     "Add :name": "Adicione :name",
+    "Address": "Endereço",
     "Admin": "Administrador",
+    "Age": "Idade",
     "Agree": "Concordar",
+    "All": "Todos",
+    "All rights reserved": "Todos os direitos reservados",
     "All rights reserved.": "Todos os direitos reservados.",
-    "Already registered?": "Já registrado?",
     "Already Reported": "Já Reportado",
+    "Already registered?": "Já registrado?",
+    "Appointment Cancellation": "Cancelamento de Agendamentos",
+    "Appointment Details": "Detalhes do Agendamento",
+    "Appointment Information": "Informações do Agendamento",
+    "Appointment Management": "Gerenciamento de Agendamentos",
+    "Appointments": "Agendamentos",
     "Archive": "Arquivo",
     "Are you sure you want to delete your account?": "Tem certeza que quer excluir a sua conta?",
     "Assign": "Atribuir",
     "Associate": "Associado",
     "Attach": "Anexar",
+    "Availability": "Disponibilidade",
+    "Back": "Voltar",
     "Bad Gateway": "Gateway Inválido",
     "Bad Request": "Requisição Inválida",
     "Bandwidth Limit Exceeded": "Limite de Banda Excedido",
+    "Birth Date": "Data de Nascimento",
     "Browse": "Navegar",
     "Cancel": "Cancelar",
+    "Cancel Appointment": "Cancelar Agendamento",
+    "Cancellation allowed with a minimum of 12 hours of advance": "Cancelamento permitido com um mínimo de 12 horas de antecedência",
     "Choose": "Escolha",
     "Choose :name": "Escolha :name",
     "Choose File": "Escolha o arquivo",
     "Choose Image": "Escolha a imagem",
+    "City": "Cidade",
+    "City/State": "Cidade/Estado",
+    "Clear Filters": "Limpar Filtros",
     "Click here to re-send the verification email.": "Clique aqui para reenviar o e-mail de verificação.",
     "Click to copy": "Clique para copiar",
     "Client Closed Request": "Solicitação fechada do cliente",
@@ -37,6 +54,8 @@
     "Collapse": "Colapso",
     "Collapse All": "Recolher todos",
     "Comment": "Comente",
+    "Complement": "Complemento",
+    "Completed Appointments": "Agendamentos Concluídos",
     "Confirm": "Confirmar",
     "Confirm Password": "Confirmar senha",
     "Conflict": "Conflito",
@@ -49,6 +68,7 @@
     "Created": "Criado",
     "Current Password": "Senha Atual",
     "Dashboard": "Painel",
+    "Date & Time": "Data & Hora",
     "Delete": "Excluir",
     "Delete :name": "Excluir :name",
     "Delete Account": "Excluir Conta",
@@ -56,14 +76,18 @@
     "Details": "Detalhes",
     "Disable": "Desativar",
     "Discard": "Descartar",
+    "Doctor": "Médico",
+    "Doctor Name": "Nome do Médico",
+    "Doctors": "Médicos",
+    "Don't have an account?": "Não tem uma conta?",
     "Done": "Feito",
     "Down": "Abaixo",
     "Duplicate": "Duplicado",
     "Duplicate :name": "Duplicado: nome",
     "Edit": "Editar",
     "Edit :name": "Editar :name",
+    "Edit Patient": "Editar Paciente",
     "Email": "E-mail",
-    "email": "O campo :attribute não contém um endereço de email válido.",
     "Email Password Reset Link": "Link de redefinição de senha",
     "Enable": "Ativar",
     "Encrypted environment file already exists.": "Um arquivo criptografado de ambiente já existe.",
@@ -71,46 +95,51 @@
     "Ensure your account is using a long, random password to stay secure.": "Garanta que sua conta esteja usando uma senha longa e aleatória para se manter seguro.",
     "Environment file already exists.": "Arquivo de ambiente já existe.",
     "Environment file not found.": "Arquivo de ambiente não encontrado.",
-    "errors": "erros",
+    "Error updating patient": "Erro ao atualizar paciente",
     "Expand": "Expandir",
     "Expand All": "Expandir todos",
     "Expectation Failed": "Falha Na Expectativa",
     "Explanation": "Explicação",
     "Export": "Exportar",
     "Export :name": "Exportar :name",
+    "Export to CSV": "Exportar para CSV",
     "Failed Dependency": "Dependência Com Falha",
     "File": "Arquivo",
     "Files": "arquivos",
+    "Filter": "Filtrar",
+    "Find doctors available in your city with filters by specialty and reviews.": "Encontre médicos disponíveis na sua cidade com filtros por especialidade e avaliações.",
     "Forbidden": "Proibido",
     "Forgot your password?": "Esqueceu a senha?",
     "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "Esqueceu sua senha? Sem problemas. É só nos informar o seu e-mail que nós enviaremos para você um link para redefinição de senha que irá permitir que você escolha uma nova senha.",
     "Found": "Encontrado",
+    "Full Name": "Nome Completo",
     "Gateway Timeout": "Tempo Limite Do Gateway",
     "Go Home": "Ir para o início",
     "Go to page :page": "Ir para página :page",
     "Gone": "Perdido",
+    "HTTP Version Not Supported": "Versão HTTP Não Suportada",
     "Hello!": "Olá!",
     "Hide": "Esconder",
     "Hide :name": "Ocultar :name",
     "Home": "Lar",
-    "HTTP Version Not Supported": "Versão HTTP Não Suportada",
     "I'm a teapot": "Eu Sou Um Bule De Chá",
+    "IM Used": "Estou Usando",
     "If you did not create an account, no further action is required.": "Se você não criou uma conta, ignore este e-mail.",
     "If you did not request a password reset, no further action is required.": "Se você não solicitou essa redefinição de senha, ignore este e-mail.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Se você estiver tendo problemas para clicar no botão \":actionText\", copie e cole a URL abaixo\nem seu navegador:",
-    "IM Used": "Estou Usando",
     "Image": "Imagem",
     "Impersonate": "Personificar",
     "Impersonation": "Representação",
     "Import": "Importar",
     "Import :name": "Importar :name",
     "Insufficient Storage": "Armazenamento Insuficiente",
+    "Intelligent Search": "Busca Inteligente",
     "Internal Server Error": "Erro Interno Do Servidor",
     "Introduction": "Introdução",
-    "Invalid filename.": "Nome de arquivo inválido.",
     "Invalid JSON was returned from the route.": "JSON inválido foi retornado da rota.",
     "Invalid SSL Certificate": "Certificado SSL Inválido",
-    "length": "comprimento",
+    "Invalid filename.": "Nome de arquivo inválido.",
+    "Keep your data updated and access your complete medical appointment history.": "Manter seus dados atualizados e acessar seu histórico completo de agendamentos médicos.",
     "Length Required": "Comprimento Necessário",
     "Like": "Como",
     "Load": "Carregar",
@@ -118,34 +147,44 @@
     "Location": "Localização",
     "Locked": "Fechado",
     "Log In": "Entrar",
-    "Log in": "Entrar",
     "Log Out": "Sair",
+    "Log in": "Entrar",
     "Login": "Entrar",
     "Logout": "Sair",
     "Loop Detected": "Loop Detectado",
+    "Main Features": "Funcionalidades Principais",
     "Maintenance Mode": "Modo De Manutenção",
+    "Make Appointment": "Agendar Consulta",
+    "Maximum of 3 simultaneous appointments per patient": "Máximo de 3 agendamentos simultâneos por paciente",
+    "Medical Scheduling System": "Sistema de Agendamento Médico",
     "Method Not Allowed": "Método Não Permitido",
     "Misdirected Request": "Solicitação Mal Direcionada",
     "Moved Permanently": "Movido Permanentemente",
     "Multi-Status": "Vários status",
     "Multiple Choices": "Múltiplas Escolhas",
+    "My Appointments": "Meus Agendamentos",
     "Name": "Nome",
-    "name": "nome",
+    "Neighborhood": "Bairro",
     "Network Authentication Required": "Autenticação De Rede Necessária",
     "Network Connect Timeout Error": "Erro de tempo limite de conexão de rede",
     "Network Read Timeout Error": "Erro de tempo limite de leitura da rede",
     "New": "Novo",
     "New :name": "Novo :name",
+    "New Appointment": "Novo Agendamento",
     "New Password": "Nova Senha",
+    "New Patient": "Novo Paciente",
     "No": "Não",
     "No Content": "Nenhum Conteúdo",
+    "No patients found.": "Nenhum paciente encontrado.",
+    "No upcoming appointments.": "Nenhum agendamento agendado.",
     "Non-Authoritative Information": "Informações Não Autorizadas",
     "Not Acceptable": "Não Aceitável",
     "Not Extended": "Não Estendido",
     "Not Found": "Não Encontrado",
     "Not Implemented": "Não Implementado",
     "Not Modified": "Não Modificado",
-    "of": "de",
+    "Notes": "Observações",
+    "Number": "Número",
     "OK": "OK",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "Uma vez que sua conta é excluída, todos os dados e recursos desta conta serão excluídos permanentemente. Antes de excluir a sua conta, faça download de todos os dados e informações que você deseje manter.",
     "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "Uma vez excluída, todos os dados e recursos relativos a ela serão permanentemente excluídos. Por favor informe a sua senha para confirmar que você deseja excluir permanentemente a sua conta.",
@@ -160,10 +199,14 @@
     "Pagination Navigation": "Navegação da Paginação",
     "Partial Content": "Contéudo Parcial",
     "Password": "Senha",
-    "password": "A senha está incorreta.",
+    "Patient": "Paciente",
+    "Patient Information": "Informações do Paciente",
+    "Patient Profile": "Perfil do Paciente",
+    "Patients": "Pacientes",
     "Payload Too Large": "Carga Muito Grande",
     "Payment Required": "Pagamento Requerido",
     "Permanent Redirect": "Redirecionamento Permanente",
+    "Phone": "Telefone",
     "Please click the button below to verify your email address.": "Por favor, clique no botão abaixo para verificar seu endereço de e-mail.",
     "Precondition Failed": "Pré-Condição Falhou",
     "Precondition Required": "Pré-Condição Necessária",
@@ -175,28 +218,37 @@
     "Proxy Authentication Required": "Autenticação De Proxy Necessária",
     "Railgun Error": "Erro do Canhão Elétrico",
     "Range Not Satisfiable": "Faixa Não Satisfatória",
+    "Real-time Schedule": "Agenda em tempo real",
+    "Real-time Schedule Verification": "Verificação de Agenda em Tempo Real",
+    "Recent Appointments": "Agendamentos Recentes",
     "Record": "Registro",
     "Regards,": "Atenciosamente,",
     "Register": "Registrar",
+    "Register Patient": "Cadastrar Paciente",
+    "Relationship": "Relacionamento",
     "Remember me": "Lembre-se de mim",
-    "Don't have an account?": "Não tem uma conta?",
     "Request Header Fields Too Large": "Campos De Cabeçalho De Solicitação Muito Grandes",
     "Request Timeout": "Tempo Limite De Requisição",
     "Resend Verification Email": "Enviar novamente o e-mail de verificação",
     "Reset Content": "Redefinir Conteúdo",
     "Reset Password": "Redefinir senha",
     "Reset Password Notification": "Notificação de redefinição de senha",
+    "Responsible": "Responsável",
     "Restore": "Restaurar",
     "Restore :name": "Restaurar :name",
-    "results": "resultados",
     "Retry With": "Repetir Com",
+    "SSL Handshake Failed": "Falha No Handshake SSL",
     "Save": "Salvar",
     "Save & Close": "Salvar fechar",
     "Save & Return": "Salvar e retornar",
     "Save :name": "Economize :name",
     "Saved.": "Salvo.",
+    "Schedule": "Agendar",
+    "Schedule, view and cancel your appointments with ease, respecting the cancellation rules.": "Agende, visualize e cancele seus agendamentos com facilidade, respeitando as regras de cancelamento.",
+    "Scheduled Appointments": "Agendamentos Agendados",
     "Search": "Pesquisar",
     "Search :name": "Pesquisar :name",
+    "Search for doctors available in the patient's city": "Procurar médicos disponíveis na cidade do paciente",
     "See Other": "Ver Outros",
     "Select": "Selecionar",
     "Select All": "Selecionar tudo",
@@ -211,30 +263,38 @@
     "Showing": "Mostrando",
     "Sign In": "Entrar",
     "Solve": "Resolver",
-    "SSL Handshake Failed": "Falha No Handshake SSL",
+    "Specialties": "Especialidades",
+    "Specialty": "Especialidade",
     "Start": "Começar",
+    "State": "Estado",
+    "Status": "Status",
     "Stop": "Parar",
+    "Street": "Rua",
     "Submit": "Enviar",
     "Subscribe": "Assinar",
     "Switch": "Trocar",
     "Switch To Role": "Mudar para função",
     "Switching Protocols": "Mudando Protocolos",
+    "System Rules": "Regras do Sistema",
     "Tag": "Marcação",
     "Tags": "Tag",
     "Temporary Redirect": "Redirecionamento Temporário",
     "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Obrigado por se registar! Antes de começar, confirme o seu endereço de e-mail clicando no link presente no e-mail que acabamos de te enviar? Caso não tenha recebido o email, teremos o maior prazer em reenviar-lhe outro.",
+    "The complete platform for managing medical appointments, connecting patients to the best healthcare professionals available in your region.": "A plataforma completa para gerenciamento de consultas médicas, conectando pacientes aos melhores profissionais de saúde disponíveis em sua região.",
     "The given data was invalid.": "Os dados fornecidos eram inválidos.",
     "The response is not a streamed response.": "A resposta não é uma resposta transmitida.",
     "The response is not a view.": "A resposta não é uma visualização.",
     "This action is unauthorized.": "Esta ação não é autorizada.",
     "This is a secure area of the application. Please confirm your password before continuing.": "Esta é uma área segura da aplicação. Por favor, confirme a sua senha antes de continuar.",
     "This password reset link will expire in :count minutes.": "O link de redefinição de senha irá expirar em :count minutos.",
-    "to": "até",
     "Toggle navigation": "Alternar navegação",
     "Too Early": "Muito cedo",
     "Too Many Requests": "Muitas solicitações",
+    "Total Appointments": "Total de Agendamentos",
+    "Total Patients": "Total de Pacientes",
     "Translate": "Traduzir",
     "Translate It": "Traduza isso",
+    "URI Too Long": "URI Muito Grande",
     "Unauthorized": "Não autorizado",
     "Unavailable For Legal Reasons": "Indisponível Por Motivos Legais",
     "Unknown Error": "Erro Desconhecido",
@@ -246,19 +306,29 @@
     "Update": "Atualizar",
     "Update :name": "Atualização :name",
     "Update Password": "Atualizar senha",
+    "Update Patient": "Atualizar Paciente",
     "Update your account's profile information and email address.": "Atualize as informações do seu perfil e endereço de e-mail.",
     "Upgrade Required": "Atualização Necessária",
-    "URI Too Long": "URI Muito Grande",
     "Use Proxy": "Usar proxy",
     "User": "Do utilizador",
     "Variant Also Negotiates": "Variante Também Negocia",
     "Verify Email Address": "Verifique o endereço de e-mail",
     "View": "Visualizar",
     "View :name": "Ver :name",
+    "View the availability of doctors in real-time and choose the best time for you.": "Visualize a disponibilidade dos médicos em tempo real e escolha o melhor horário para você.",
     "Web Server is Down": "Servidor Web Está Inativo",
     "Whoops!": "Ops!",
     "Yes": "Sim",
     "You are receiving this email because we received a password reset request for your account.": "Você recebeu esse e-mail porque foi solicitado uma redefinição de senha na sua conta.",
     "You're logged in!": "Você está logado!",
-    "Your email address is unverified.": "Seu endereço de e-mail não foi verificado."
+    "Your email address is unverified.": "Seu endereço de e-mail não foi verificado.",
+    "Zip Code": "Cep",
+    "email": "O campo :attribute não contém um endereço de email válido.",
+    "errors": "erros",
+    "length": "comprimento",
+    "name": "nome",
+    "of": "de",
+    "password": "A senha está incorreta.",
+    "results": "resultados",
+    "to": "até"
 }
